<resources>

    <string name="app_name">Hill Bomber</string>
    <string name="menu_settings">Settings</string>
    <string name="greenCircle">Green</string>
    <string name="blueSquare">Blue</string>
    <string name="blackDiamond">Black</string>
    <string name="doubleBlackDiamond">Double Black</string>
    <string name="start">Add Trail!</string>
    <string name="title">New Trail Title</string>
    <string name="newRoute">New</string>
    <string name="refresh">Refresh</string>
    <string name="endRoute">End</string>

</resources>