<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:layout_marginBottom="25dip" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dip" >

        <RadioButton
            android:id="@+id/greenCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/greenCircle" />

        <RadioButton
            android:id="@+id/blueSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blueSquare" />

        <RadioButton
            android:id="@+id/blackDiamond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackDiamond" />

        <RadioButton
            android:id="@+id/doubleBlackDiamond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doubleBlackDiamond" />
    </RadioGroup>

    <Button
        android:id="@+id/start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" />

</LinearLayout>